src/test/resources/failing/fail28.pnd
P(42)

template Foo <X>{
	Q(x) <- X.P(x)
}

template Bar <A, B> : Foo<A> {
	W(x) <- A.P(x)
}
Bar<_> as B1
